Add base for navigation between the menu and the activities under development.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,8 @@
     <string name="title_activity_play_challenges">PlayChallengesActivity</string>
     <string name="title_activity_scrabble">ScrabbleActivity</string>
     <string name="title_activity_abc">ABCActivity</string>
+    <string name="title_activity_profiles">ProfilesActivity</string>
+    <string name="title_activity_data_analysis">DataAnalysisActivity</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 
 </resources>
