Add feature to create simple challenge containing a combination of word+image .

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="title_activity_create_text">CreateTextActivity</string>
     
     <string name="save">Salvar</string>
+    <string name="saved">Salvo</string>
     <string name="title_activity_receive_text">ReceivTextActivity</string>
 
     <string name="title_activity_menu">Meu ABC</string>
