--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,14 +38,17 @@
     <string name="build_the_words">Construa a palavra</string>
     <string name="correct">Correto!</string>
     <string name="play">Jogar</string>
+    <string name="deleteWord">Excluir Palavra</string>
 
     <string name="image">Imagem</string>
+    <string name="newWord">Adicionar palavra</string>
 
     <string name="name">Nome</string>
     <string name="users">Usuários</string>
     <string name="settings">Configurações</string>
     <string name="newUser">Novo Usuário</string>
     <string name="goBack">Voltar</string>
+    <string name="words">Palavras</string>
 
     <string name="dataAnalysis">Análise de dados</string>
 
