--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,9 +63,13 @@
 
     <string name="password">Senha</string>
 
+    <string name="activities">Atividades</string>
+
     <string name="checkDataTyped">Verifique os dados digitados</string>
 
     <string name="login">Entrar</string>
+
+    <string name="stats">Estatísticas</string>
     <!-- Colors -->
     <color name="white">#FFFFFF</color>
     <color name="blue">#1887C7</color>
