Add logout for admin users.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -65,6 +65,7 @@
 
     <string name="stats">Stats</string>
     <string name="activities">Activities</string>
+    <string name="logout">Logout</string>
 
     <!-- Colors -->
     <color name="white">#FFFFFF</color>
