--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="checkDataTyped">Verifique os dados digitados</string>
 
     <string name="login">Entrar</string>
+    <string name="logout">Sair</string>
 
     <string name="stats">Estatísticas</string>
     <!-- Colors -->
