change title_activity_menu value

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="saved">Salvo</string>
     <string name="title_activity_receive_text">ReceivTextActivity</string>
 
-    <string name="title_activity_menu">Meu ABC</string>
+    <string name="title_activity_menu">EMA</string>
 
     <!-- Menu -->
     <string name="messages">Palavras</string>
