--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -9,7 +9,7 @@
     <string name="saved">Saved</string>
     <string name="title_activity_receive_text">ReceivTextActivity</string>
 
-    <string name="title_activity_menu">My ABC</string>
+    <string name="title_activity_menu">EMA</string>
 
     <!-- Menu -->
     <string name="messages">Words</string>
