delete parts with problems in the app charts.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -42,6 +42,9 @@
     <string name="play">Play</string>
     <string name="words">Words</string>
     <string name="deleteWord">Delete Word</string>
+    <string name="deleteUsers">Delete User(s)</string>
+
+    <string name="noData">Without data</string>
 
     <string name="image">Image</string>
     <string name="name">Name</string>
