--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -43,6 +43,9 @@
     <string name="words">Words</string>
     <string name="deleteWord">Delete Word</string>
     <string name="deleteUsers">Delete User(s)</string>
+    <string name="updateUser">Update User</string>
+    <string name="wasCreated">was created.</string>
+    <string name="wasUpdated">was updated.</string>
 
     <string name="noData">Without data</string>
 
@@ -51,7 +54,11 @@
     <string name="users">Users</string>
     <string name="settings">Settings</string>
     <string name="newUser">New User</string>
+    <string name="deleteUser">Delete User</string>
     <string name="goBack">Back</string>
+    <string name="onlyOneToEdit">Check only one user to edit</string>
+    <string name="checkOneToEdit">Choose one user to edit</string>
+
 
     <string name="level">Level</string>
     <string name="levelEasy">Easy</string>
@@ -60,7 +67,7 @@
 
     <string name="password">Password</string>
     <string name="checkDataTyped">Check typed data</string>
-    <string name="Login">Login</string>
+    <string name="login">Login</string>
 
     <string name="language">Language</string>
     <string name="portuguese">Portuguese</string>
