--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="takeSmallPicture">Foto pequena</string>
     <string name="cannot">Não pode</string>
     <string name="album_name">MeuABCAlbum</string>
-
+    
     <string name="speech_toggle_on">Falar</string>
     <string name="speech_toggle_off">Parar</string>
 
@@ -47,11 +47,15 @@
     <string name="users">Usuários</string>
     <string name="settings">Configurações</string>
     <string name="newUser">Novo Usuário</string>
-    <string name="deleteUsers">Deletar Usuáio(s)</string>
+    <string name="deleteUsers">Remover Usuário(s)</string>
+    <string name="updateData">Editar Usuário</string>
     <string name="goBack">Voltar</string>
     <string name="words">Palavras</string>
-
+    <string name="onlyOneToEdit">Marque somente um usuário para editar</string>
+    <string name="checkOneToEdit">Escolha um usuário para editar</string>
     <string name="dataAnalysis">Análise de dados</string>
+    <string name="wasCreated">foi criado.</string>
+    <string name="wasUpdated">foi atualizado.</string>
 
     <string name="noData">Sem dados.</string>
 
