--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -56,6 +56,7 @@
     <string name="newUser">New User</string>
     <string name="deleteUser">Delete User</string>
     <string name="goBack">Back</string>
+    <string name="cancel">Cancel</string>
     <string name="onlyOneToEdit">Check only one user to edit</string>
     <string name="checkOneToEdit">Choose one user to edit</string>
 
