--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -25,7 +25,7 @@
     <string name="speech_toggle_off">Stop</string>
 
     <string name="start_speaking">Start</string>
-    <string name="stop_speaking"></string>
+    <string name="stop_speaking">Stop speaking</string>
     <string name="title_activity_drag_and_drop">DragAndDropActivity</string>
     <string name="newWord">Add word</string>
 
@@ -91,5 +91,9 @@
     <string name="title_activity_profiles">ProfilesActivity</string>
     <string name="title_activity_data_analysis">DataAnalysisActivity</string>
     <string name="title_activity_user">UserActivity</string>
+    <string name="title_activity_admin_form">AdminFormActivity</string>
+    <string name="title_activity_initial_loading">InitialLoadingActivity</string>
+    <string name="title_activity_stats">StatsActivity</string>
+    <string name="updateData">Edit data</string>
 
 </resources>
