--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="speech_toggle_off">Parar</string>
 
     <string name="start_speaking">Start</string>
-    <string name="stop_speaking"></string>
+    <string name="stop_speaking">Parar fala</string>
     <string name="title_activity_drag_and_drop">DragAndDropActivity</string>
 
     <string name="hello_world">Hello world!</string>
@@ -49,7 +49,7 @@
     <string name="settings">Configurações</string>
     <string name="newUser">Novo Usuário</string>
     <string name="deleteUsers">Remover Usuário(s)</string>
-    <string name="updateData">Editar Usuário</string>
+    <string name="updateData">Editar dados</string>
     <string name="goBack">Voltar</string>
     <string name="words">Palavras</string>
     <string name="onlyOneToEdit">Marque somente um usuário para editar</string>
@@ -95,5 +95,7 @@
     <string name="title_activity_initial_loading">InitialLoadingActivity</string>
     <string name="title_activity_admin_form">AdminFormActivity</string>
     <string name="title_activity_stats">StatsActivity</string>
+    <string name="deleteUser">Remover Usuário</string>
+    <string name="updateUser">Atualizar Usuário</string>
 
 </resources>
