--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,9 @@
     <string name="speech_toggle_on">Falar</string>
     <string name="speech_toggle_off">Parar</string>
 
+    <string name="add">Adicionar</string>
+    <string name="edit">Editar</string>
+    <string name="delete">Remover</string>
     <string name="start_speaking">Start</string>
     <string name="stop_speaking">Parar fala</string>
     <string name="title_activity_drag_and_drop">DragAndDropActivity</string>
