--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -22,10 +22,10 @@
     <string name="album_name">MeuABCAlbum</string>
 
     <string name="speech_toggle_on">Speak</string>
-    <string name="speech_toggle_off">Stop</string>
+    <string name="speech_toggle_off">Speak</string>
 
     <string name="start_speaking">Start</string>
-    <string name="stop_speaking">Stop speaking</string>
+    <!--<string name="stop_speaking">Stop speaking</string>-->
     <string name="title_activity_drag_and_drop">DragAndDropActivity</string>
     <string name="newWord">Add word</string>
     <string name="add">Add</string>
