--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -7,6 +7,9 @@
     
     <string name="save">Save</string>
     <string name="saved">Saved</string>
+    <string name="turnOn">Turn on</string>
+    <string name="turnOff">Turn off</string>
+    <string name="sound">Sound</string>
     <string name="title_activity_receive_text">ReceivTextActivity</string>
 
     <string name="title_activity_menu">EMA</string>
