--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,10 @@
     <string name="points">ponto(s)</string>
     <string name="noWordsMessage">Este usuário não possui atividade cadastrada. Por favor Contate o Administrador</string>
     <string name="title_activity_receive_text">ReceivTextActivity</string>
+    <string name="playedActivities">Atividades jogadas</string>
+    <string name="highestPontuation">Pontuação mais alta</string>
+    <string name="lowestPontuation">Pontuação mais baixa</string>
+    <string name="Points">Ponto(s)</string>
 
     <string name="title_activity_menu">EMA</string>
 
