add logic to see basic statistics about the user's performance in the activities.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -16,6 +16,10 @@
     <string name="made">made</string>
     <string name="points">point(s)</string>
     <string name="title_activity_receive_text">ReceivTextActivity</string>
+    <string name="playedActivities">Played Activities</string>
+    <string name="highestPointing">Highest pointing</string>
+    <string name="lowestPointing">Lowest pointing</string>
+    <string name="Points">Point(s)</string>
 
     <string name="title_activity_menu">EMA</string>
 
