show dialog when there's no user checked for statistics.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -20,6 +20,7 @@
     <string name="highestPointing">Highest pointing</string>
     <string name="lowestPointing">Lowest pointing</string>
     <string name="Points">Point(s)</string>
+    <string name="Choose_an_user">Choose an user</string>
 
     <string name="title_activity_menu">EMA</string>
 
