--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="highestPointing">Pontuação mais alta</string>
     <string name="lowestPointing">Pontuação mais baixa</string>
     <string name="Points">Ponto(s)</string>
+    <string name="Choose_an_user">Escolha um usuário</string>
 
     <string name="title_activity_menu">EMA</string>
 
