Add validation to avoid the addiction of a user with the same name of an admin or an user that already exists.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -114,5 +114,6 @@
     <string name="showWord">Show word</string>
     <string name="Yes">Yes</string>
     <string name="No">No</string>
-
+    <string name="ChooseAnotherNameAdm">Choose another name, this is the administrator name.</string>
+    <string name="ChooseAnotherName">Choose another name.</string>
 </resources>
