--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,6 +117,8 @@
     <string name="showWord">Mostrar palavra</string>
     <string name="Yes">Sim</string>
     <string name="No">Não</string>
+    <string name="ChooseAnotherNameAdm">Escolha outro nome, este é o nome do administrador.</string>
+    <string name="ChooseAnotherName">Escolha outro nome.</string>
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
