--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -116,4 +116,5 @@
     <string name="No">No</string>
     <string name="ChooseAnotherNameAdm">Choose another name, this is the administrator name.</string>
     <string name="ChooseAnotherName">Choose another name.</string>
+    <string name="imageOf">Image of </string>
 </resources>
