--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,7 @@
     <string name="goBack">Voltar</string>
     <string name="words">Palavras</string>
     <string name="Word">Palavra</string>
+    <string name="wordAudio">Audio da palavra</string>
     <string name="onlyOneToEdit">Marque somente um usuário para editar</string>
     <string name="checkOneToEdit">Escolha um usuário para editar</string>
     <string name="dataAnalysis">Análise de dados</string>
@@ -127,5 +128,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="imageOf">Imagem de </string>
     <string name="logo">Logo</string>
+    <string name="comma">,</string>
+    <string name="keySpace">          </string>
+    <string name="erase">apagar</string>
 
 </resources>
