--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -124,4 +124,5 @@
     <string name="comma">,</string>
     <string name="keySpace">          </string>
     <string name="erase">erase</string>
+    <string name="zero">0</string>
 </resources>
