--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,5 +131,6 @@
     <string name="comma">,</string>
     <string name="keySpace">          </string>
     <string name="erase">apagar</string>
+    <string name="zero">0</string>
 
 </resources>
