Fix image orientation bug.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -125,4 +125,5 @@
     <string name="keySpace">          </string>
     <string name="erase">erase</string>
     <string name="zero">0</string>
+    <string name="rotate">rotate</string>
 </resources>
