--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -128,4 +128,9 @@
     <string name="zero">0</string>
     <string name="rotate">rotate</string>
     <string name="blank"></string>
+    <string name="tutorial_admin_form1">Welcome!</string>
+    <string name="tutorial_admin_form2">First, define your data of  the administrator user </string>
+    <string name="tutorial_admin_form3">Define the user\'s name. ie: admin</string>
+    <string name="tutorial_admin_form4">Define the user\'s password. Use more than 6 characters</string>
+    <string name="tutorial_admin_form5">Then click on save.</string>
 </resources>
