--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <string name="action_settings">Configurações</string>
     <string name="title_activity_create_text">CreateTextActivity</string>
-    
+
     <string name="save">Salvar</string>
     <string name="saved">Salvo</string>
     <string name="cancel">Cancelar</string>
@@ -75,7 +75,7 @@
     <string name="onlyOneToEdit">Marque somente um usuário para editar</string>
     <string name="checkOneToEdit">Escolha um usuário para editar</string>
     <string name="dataAnalysis">Análise de dados</string>
-    <string name="wasCreated">foi criado.</string>
+    <string name="wasCreated">foi criado(a).</string>
     <string name="wasUpdated">foi atualizado.</string>
 
     <string name="noData">Sem dados.</string>
@@ -136,7 +136,17 @@
     <string name="tutorial_admin_form2">Primeiro defina os dados do usuário administrador</string>
     <string name="tutorial_admin_form3">Defina o nome do usuário. Exemplo: admin</string>
     <string name="tutorial_admin_form4">Defina a senha do usuário. utilize mais de 6 caracteres</string>
-    <string name="tutorial_admin_form5">Então clique em salvar.</string>
+    <string name="tutorial_admin_form5">Adicione um email para recuperar a senha de Administrador se necessário.</string>
+    <string name="tutorial_admin_form6">Então clique em salvar.</string>
     <string name="noStats">Sem estatísticas no momento.</string>
-
+    <string name="Email">Email</string>
+    <string name="anEmailWillbeSend">Um email será enviado.</string>
+    <string name="title_activity_new_admin_password">NewAdminPassword</string>
+    <string name="ConfirmPassword">Confirmar Senha</string>
+    <string name="newPassword">Nova Senha</string>
+    <string name="ChangingPassword">Mudando Senha</string>
+    <string name="YourNewPasswordIs">Sua nova senha é</string>
+    <string name="invalidEmail">E-mail inválido.</string>
+    <string name="passwordWithLessThan6">Senha com menos de 6 caracteres.</string>
+    <string name="DifferentPasswords">Senhas Diferentes.</string>
 </resources>
