--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,4 +149,5 @@
     <string name="invalidEmail">E-mail inválido.</string>
     <string name="passwordWithLessThan6">Senha com menos de 6 caracteres.</string>
     <string name="DifferentPasswords">Senhas Diferentes.</string>
+    <string name="title_activity_abc_words">AbcWordsActivity</string>
 </resources>
